# bib-dedupe

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  evaluation.py  pyproject.toml  release-checklist.md
.github/workflows/: docs.yml  evaluate.yml  poetry_update.yml  tests.yml
bib_dedupe/: __init__.py  bib_dedupe.py  block.py  cli.py  cluster.py  conditions.py  constants.py  debug.py  dedupe_benchmark.py  exception.py  extract_cases.py  extract_problem_cases.py  journal_variants.csv  match.py  match_conditions.py  maybe_cases.py  merge.py  prep.py  prep_abstract.py  prep_author.py  prep_container_title.py  prep_doi.py  prep_number.py  prep_pages.py  prep_schema.py  prep_title.py  prep_volume.py  prep_year.py  sim.py  util.py  wikipedia_journal_translations.csv
bib_dedupe/constants/: __init__.py  colors.py  entrytypes.py  fields.py
bib_dedupe/data/: parse.py
bib_dedupe/data/cardiac/: matches_FN_list_ignored.csv
bib_dedupe/data/depression/: merged_record_ids.csv
bib_dedupe/data/diabetes/: maybe_pairs.csv
bib_dedupe/data/digital_work/: matches_FN_list.csv  maybe_pairs.csv  merged_record_ids.csv  records_pre_merged.csv
bib_dedupe/data/haematology/: records_pre_merged.csv
bib_dedupe/data/respiratory/: matches_FN_list_remaining.csv  maybe_pairs.csv
bib_dedupe/data/special_cases/: maybe_pairs.csv  merged_record_ids.csv  records_pre_merged.csv
bib_dedupe/data/stroke/: blocks_FN_list.csv
data/: parse.py
data/cardiac/: blocks_FN_list.csv  matches_FN_list.csv  matches_FN_list_ignored.csv  matches_FP_list.csv  matches_FP_list_ignored.csv  matches_FP_list_remaining.csv  merged_record_ids.csv  merged_record_origins.csv
data/cytology_screening/: matches_FN_list.csv  matches_FN_list_ignored.csv  matches_FP_list.csv  matches_FP_list_ignored.csv  matches_FP_list_remaining.csv  merged_record_ids.csv  merged_record_origins.csv  records_pre_merged.csv
data/depression/: matches_FN_list.csv  matches_FN_list_ignored.csv  merged_record_ids.csv
data/diabetes/: asdfpoijasdf.csv  blocks_FN_list.csv  matches_FN_list.csv  matches_FP_list.csv  merged_record_ids.csv  merged_record_origins.csv
data/digital_work/: blocks_FN_list.csv  matches_FN_list.csv  matches_FN_list_ignored.csv  matches_FP_list.csv  merged_record_ids.csv  merged_record_origins.csv
data/haematology/: README.md  blocks_FN_list.csv  matches_FN_list.csv  matches_FP_list.csv  merged_record_ids.csv  merged_record_origins.csv  records_pre_merged.csv
data/neuroimaging/: blocks_FN_list.csv  matches_FN_list.csv  matches_FP_list.csv  merged_record_ids.csv  merged_record_origins.csv
data/respiratory/: matches_FN_list.csv  matches_FN_list_ignored.csv  merged_record_ids.csv  merged_record_origins.csv  q_stats.csv  records_pre_merged.csv  updated_paper_pairs.csv  updated_papers_ids.csv  updated_papers_origins.csv
data/special_cases/: matches_FN_list.csv  merged_record_ids.csv  records_pre_merged.csv
data/srsr/: matches_FN_list.csv  matches_FN_list_ignored.csv  matches_FP_list.csv  merged_record_ids.csv
data/stroke/: matches_FN_list.csv  matches_FP_list.csv  merged_record_ids.csv  merged_record_origins.csv  records_pre_merged.csv  updated_paper_pairs.csv
docs/: api.rst  architecture.rst  benchmark.rst  benchmark_runtime_detailed.py  cli.rst  conf.py  doc_requirements.txt  evaluation.rst  index.rst  installation.rst  setup.rst  usage.rst
experiments/: dedupe_sources.py
experiments/exp_jmis/: PDF_DBLP_samples.py  PDF_DBLP_title_samples.bib  analyze_pdf_200_results.py  test_pdf_200_nodup.py  test_pdf_all_nodup.py
experiments/exp_mis/: bib2csv.py  eval_simple.py  evaluation_mis.py  evaluation_pdf.py  false_positives.csv  filter_records.py  gen_merged_record_ids.py  gen_records_pre_merged.py
experiments/exp_mis/baseline/: baseline.csv  false_positives.csv  filter_baseline_merged_record_ids.py  merged_record_ids.csv  records.bib  records_pre_merged.csv
experiments/exp_mis/mixed/: false_positives.csv  merged_record_ids.csv  mixed.csv  records_pre_merged.csv
experiments/exp_mis/pdf_only/: false_positives.csv  filter_pdf_merged_record_ids.py  merged_record_ids.csv  pdf_only.csv  records.bib  records_pre_merged.csv
experiments_output/: pdfs_dupe_falsh.csv
experiments_output/output_ecis/: dblp_duplicate_clusters.csv  pdfs_duplicate_clusters.csv
experiments_output/output_ejis/: crossref_duplicate_clusters.csv  dblp_duplicate_clusters.csv  pdfs_duplicate_clusters.csv  summary.csv
experiments_output/output_jmis/: crossref_duplicate_clusters.csv  dblp_duplicate_clusters.csv  pdf_all_removed_records.csv  pdfs_duplicate_clusters.csv  summary.csv
experiments_output/output_mis/: crossref_duplicate_clusters.csv  pdfs_duplicate_clusters.csv
experiments_output/output_pacis/: dblp_duplicate_clusters.csv  pdfs_duplicate_clusters.csv  summary.csv
notebooks/: PDF_DBLP_test.py  PDF_DBLP_title_samples.py  README.md  analyze_conditions.py  analyze_pdf_200_clusters.py  analyze_pdf_all_results.py  asreview.ipynb  asysd_evaluation.R  bib-dedupe-analyze-cases.ipynb  bib-dedupe.ipynb  comparison.ipynb  create_benchmark_dataset.ipynb  create_benchmark_dataset_from_colrev.py  evaluation.ipynb  evaluation.py  requirements.txt  test_pdf.py
notebooks/buhos/: Gemfile  canonical_document.rb  doi_helpers.rb  duplicate_analysis.rb  handle_cli.rb  reference_methods.rb  textual_analysis_mixin.rb
output/: current_results.md  duplicate_clusters.txt  duplicate_clusters_explained.csv  evaluation.csv  pdf_200_nodup_deduped.csv  pdf_200_nodup_input.csv  pdf_200_removed_records.csv  pdf_all_nodup_deduped.csv  pdf_all_nodup_input.csv
output/PDF_DBLP/: PDF_DBLP_title_samples_deduped.csv
paper/: paper.bib  paper.jats  paper.md
tests/: case_test.py  cli_test.py  conditions_test.py  conftest.py  dedupe_test.py  full_test.py  match_test.py  merge_test.py  prep_test.py  sim_test.py  test_cases.json  test_cli.py
tests/data/: merged_record_ids.csv  merged_record_origins.csv  parse.py  records_pre_merged.csv  updated_papers_ids.csv  updated_papers_origins.csv
(+19 files in other folders)
