[tool.poetry]
name = "bib-dedupe"
version = "0.7.4"
description = "Identify and merge duplicates in bibliographic records"
authors = ["Gerit Wagner <gerit.wagner@uni-bamberg.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoLRev-Environment/bib-dedupe"
documentation = "https://colrev-environment.github.io/bib-dedupe/"
keywords = ["de-duplication", "duplicate", "meta-analysis", "research", "reproducible research", "open science", "literature", "literature review", "systematic review", "systematic literature review"]
classifiers = [
   "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[[tool.poetry.packages]]
include = "bib_dedupe"

[tool.poetry.scripts]
bib-dedupe = "bib_dedupe.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pylint = {version = "3.0.1", optional = true }
pytest = {version = "^7.2.1", optional = true }
coverage = {extras = ["toml"], version = "^7.3.2", optional = true }
asreview = {version = "^1.5", optional = true }
number-parser = "^0.3.2"
numpy = "^1.19.5"
pandas = "^1.3.4"
rapidfuzz = "^3.5.2"
tqdm = "^4.66.1"
setuptools = "^69.1.1"
requests = "^2.31.0"

[tool.poetry.extras]
with-data = ["pandas", "asreview"]
dev = ["pylint", "pytest", "coverage", "pytest-skip-slow"]

[tool.mypy]
python_version = 3.9
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pkg_resources.*",
]
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
disable = ["R0801"]

[tool.coverage.report]
omit = [
    "/usr/*", # omit everything in /usr
    "/tmp/*",
    "tests/*",
]

[tool.coverage.run]
omit = [
    "/usr/*", # omit everything in /usr
    "/tmp/*",
    "tests/*",
]

[tool.ruff]
line-length = 160

[tool.ruff.per-file-ignores]
"**/{tests,docs}/*" = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0", "cython<3.0"]
build-backend = "poetry.core.masonry.api"
